# embedded_system_project_SAE0925

./: .gitignore  Cargo.toml  README.md  ast_hir.txt  ast_mir.txt  ast_tree.txt  smarthome_state.json
docs/: .gitignore.md  Cargo.lock.md  Cargo.toml.md  FileDocumentationIndex.md  SmartHomeDocumentation.md  TechnischeGesamtdokumentation.md  smarthome_state.json  smarthome_state.json.md  src-cli.rs.md  src-domain.rs.md  src-main.rs.md  src-storage.rs.md
src/: cli.rs  domain.rs  main.rs  storage.rs
