[package]
name = "embedded_system_project"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet <placeholder>", "Malika <placeholder>", "Solomon <placeholder>"]
description = "SmartHome embedded system project (Raspberry Pi) written in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
[[bin]]
name = "smarthome"
path = "src/main.rs"
